# Lats-Core

./: .travis.yml  CMakeLists.txt  CONTRIBUTING.md  COPYING  INSTALL  Makefile.am  README.md  configure.ac  whitepaper.md
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build-and-test.yml
.tx/: config
build-aux/m4/: bitcoin_qt.m4  gmp.m4
build-aux/snap/: snapcraft.yaml
contrib/: gitian-build.py  install_db4.sh  lats-cli.bash-completion  lats-qt.pro  lats-tx.bash-completion  latsd.bash-completion  valgrind.supp
contrib/bitrpc/: bitrpc.py
contrib/debian/: README.md  changelog  control  lats-qt.desktop  lats-qt.install  lats-qt.lintian-overrides  lats-qt.manpages  lats-qt.protocol  latsd.bash-completion  latsd.examples  latsd.install  latsd.lintian-overrides  latsd.manpages  latsd.postinst  latsd.postrm  latsd.service  rules  watch
contrib/devtools/: README.md  copyright_header.py  gen-manpages.sh  test_deterministic_coverage.sh  update-translations.py
contrib/gitian-descriptors/: gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win-signer.yml  gitian-win.yml
contrib/gitian-keys/: README.md
contrib/init/: README.md  latsd.conf  latsd.init  latsd.openrc  latsd.openrcconf  latsd.service  org.lats.latsxd.plist
contrib/linearize/: linearize-hashes.py
contrib/macdeploy/: README.md  custom_dsstore.py  detached-sig-create.sh  macdeployqtplus
contrib/qos/: README.md  tc.sh
contrib/rpm/: lats.fc  lats.if  lats.spec  lats.te
contrib/seeds/: README.md  generate-seeds.py  makeseeds.py  (+2 more)
depends/: README.md
doc/: Doxyfile.in  JSON-RPC-API.md  JSON-RPC-API.mediawiki  README.md  README_windows.txt  REST-interface.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  gitian-building.md  init.md  masternode-setup.md  reduce-memory.md  release-notes.md  release-process.md  seednode.md  tor.md  translation_process.md  translation_strings_policy.md  zmq.md
params/: install-params.sh  sapling-output.params
share/: setup.nsi.in  ui.rc
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  activemasternode.cpp  activemasternode.h  addrdb.cpp  addrdb.h  addressbook.cpp  addressbook.h  addrman.cpp  addrman.h  amount.h  base58.cpp  base58.h  bip38.cpp  bip38.h  blockassembler.cpp  blockassembler.h  blocksignature.cpp  blocksignature.h  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.cpp  coins.h  compat.h  (+120 more)
src/qt/: CMakeLists.txt  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bantablemodel.h  bitcoinaddressvalidator.cpp  bitcoinunits.cpp  bitcoinunits.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  lats.cpp  lats.qrc  lats_locale.qrc  latsstrings.cpp  macnotificationhandler.h  macnotificationhandler.mm  networkstyle.cpp  notificator.cpp  notificator.h  openuridialog.cpp  openuridialog.h  optionsmodel.cpp  optionsmodel.h  paymentserver.cpp  (+23 more)
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  intro.ui  openuridialog.ui  rpcconsole.ui
src/qt/lats/: addnewcontactdialog.cpp  addnewcontactdialog.h  addresseswidget.cpp  addresseswidget.h  addressfilterproxymodel.cpp  addressfilterproxymodel.h  addressholder.cpp  addressholder.h  addresslabelrow.cpp  addresslabelrow.h  balancebubble.cpp  balancebubble.h  coldstakingmodel.cpp  coldstakingmodel.h  coldstakingwidget.cpp  coldstakingwidget.h  contactdropdownrow.cpp  contactdropdownrow.h  contactsdropdown.cpp  contactsdropdown.h  createproposaldialog.cpp  createproposaldialog.h  csrow.cpp  csrow.h  dashboardwidget.cpp  dashboardwidget.h  defaultdialog.cpp  defaultdialog.h  expandablebutton.cpp  expandablebutton.h  focuseddialog.cpp  focuseddialog.h  furabstractlistitemdelegate.cpp  furabstractlistitemdelegate.h  furlistrow.h  governancemodel.cpp  governancemodel.h  governancewidget.cpp  governancewidget.h  guitransactionsutils.cpp  (+69 more)
src/qt/lats/forms/: addresseswidget.ui  coldstakingwidget.ui  createproposaldialog.ui  dashboardwidget.ui  governancewidget.ui  masternodeswidget.ui  receivewidget.ui  requestdialog.ui  send.ui  sendchangeaddressdialog.ui  sendmultirow.ui  topbar.ui  votedialog.ui  welcomecontentwidget.ui
src/qt/lats/res/css/: style_dark.css  style_light.css
src/qt/lats/settings/: settingsbackupwallet.cpp  settingsbackupwallet.h  settingsbittoolwidget.cpp  settingsbittoolwidget.h  settingsconsolewidget.cpp  settingsconsolewidget.h  settingsdisplayoptionswidget.cpp  settingsdisplayoptionswidget.h  settingsexportcsv.cpp  settingsexportcsv.h  settingsfaqwidget.cpp  settingsfaqwidget.h  settingsinformationwidget.cpp  settingsinformationwidget.h  settingsmainoptionswidget.cpp  settingsmainoptionswidget.h  settingsnetworkwidget.cpp  settingsnetworkwidget.h  settingssignmessagewidgets.cpp  settingssignmessagewidgets.h  settingswalletoptionswidget.cpp  settingswalletoptionswidget.h  settingswalletrepairwidget.cpp  settingswalletrepairwidget.h  settingswidget.cpp  settingswidget.h
src/qt/lats/settings/forms/: settingsbittoolwidget.ui  settingsdisplayoptionswidget.ui  settingsfaqwidget.ui  settingsmainoptionswidget.ui  settingssignmessagewidgets.ui  settingswalletoptionswidget.ui  settingswidget.ui
src/qt/locale/: lats_de.ts  lats_en.ts  lats_en_US.ts  lats_es.ts  lats_es_ES.ts  lats_fr_FR.ts  lats_hr_HR.ts  lats_it.ts  lats_ko_KR.ts  lats_nl.ts  lats_pl.ts  lats_ru.ts  lats_tr.ts  lats_zh_CN.ts
src/qt/res/: lats-qt-res.rc
src/qt/res/css/: default.css
src/qt/res/icons/: bitcoin.icns
src/qt/test/: test_main.cpp  uritests.cpp
test/: README.md
util/: fetch-params.sh
(+502 files in other folders)
